--- a/lineup.css
+++ b/lineup.css
@@ -51,6 +51,7 @@
     margin-right: auto;
     margin-top: 9%;
     margin-bottom: 9%;
+    clip-path: polygon(50% 0%, 100% 15%, 100% 85%, 50% 100%, 0% 85%, 0% 15%);
     z-index: 50;
 }
 .frame-container{
