--- a/css/lineup.css
+++ b/css/lineup.css
@@ -1,6 +1,6 @@
 .lineup-container {
     justify-content: space-between;
-    display: flex;
+    display: none;  /*display: flex;*/
     /* margin-left: 25%;
     margin-right: 25%; */
     width: 100%;
