--- a/css/OSH-PHANTON.css
+++ b/css/OSH-PHANTON.css
@@ -20,6 +20,9 @@ body {
 .left-column {
     flex-basis: 45%;
     background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .middle-column {
